--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.439.0",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
