--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i18next": "^23.15.1",
     "lucide-react": "^0.439.0",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
@@ -26,6 +28,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "zod-i18n-map": "^2.27.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
